# OptimiseItChallenge

./: .gitignore  CMakeLists.txt  README.md  run_app.sh
include/: luaIncludes.hpp
libs/: CBasicMatrixCorrelation.cpp  CBasicMatrixCorrelation.hpp  CMakeLists.txt  CMatrixCorrelator.cpp  CMatrixCorrelator.hpp  CMaxOptimisedDPrecisionMatrixCorrelation.hpp  CMaxOptimisedSPrecisionMatrixCorrelation.cpp  CParallelMatrixCorrelation.cpp  CVectorisedMatrixCorrelation.hpp  correlationMatrixBasic.cpp  correlationMatrixBasic.hpp  correlationMatrixILP.cpp  correlationMatrixILP.hpp
libs/ImageSegmentation/: CImageSegmenter.cpp  CImageSegmenter.cppm  CImageSegmenter.hpp  CMakeLists.txt  COptimisedImageSegmentation.cpp  COptimisedImageSegmentation.cppm  COptimisedImageSegmentation.hpp  IImageSegmentationStrategy.cppm  IImageSegmentationStrategy.hpp  ImageSegmenterLuaAdapter.cppm  ImageSegmenterLuaAdapter.hpp  README.md
libs/MatrixCorrelation/: CBasicMatrixCorrelation.cppm  CILPMatrixCorrelation.cpp  CILPMatrixCorrelation.cppm  CILPMatrixCorrelation.hpp  CMakeLists.txt  CMatrixCorrelator.cppm  CMaxOptimisedDPrecisionMatrixCorrelation.cpp  CMaxOptimisedDPrecisionMatrixCorrelation.cppm  CMaxOptimisedSPrecisionMatrixCorrelation.cppm  CMaxOptimisedSPrecisionMatrixCorrelation.hpp  CParallelMatrixCorrelation.cppm  CParallelMatrixCorrelation.hpp  CVectorisedMatrixCorrelation.cpp  CVectorisedMatrixCorrelation.cppm  IMatrixCorrelationStrategy.cppm  IMatrixCorrelationStrategy.hpp  MatrixCorrelatorLuaAdapter.cppm  MatrixCorrelatorLuaAdapter.hpp  README.md
libs/MatrixCorrelation/cuda/: CudaBasicMatrixCorrelation.cu  CudaOptimisedMatrixCorrelation.cu
libs/ParallelSorting/: CMakeLists.txt  CParallelSorter.cppm  ParallelSorterLuaAdapter.cppm  README.md
libs/Utilities/: CMakeLists.txt  ImageUtilities.cpp  ImageUtilities.cppm  ImageUtilities.hpp
src/: CMakeLists.txt  main.cpp
src/lua_drivers/: correlation_driver.lua  correlation_tests.lua  image_utils.lua  matrix_utils.lua  runtests.lua  segmentation_driver.lua  segmentation_tests.lua  sorting_driver.lua
src/lua_drivers/test_data/: m30x30.txt  m30x30_correlated.txt  m30x30_correlated_floats.txt  m4x4.txt  m4x4_correlated.txt  m4x4_correlated_floats.txt
